@@ -42,6 +42,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to JT Justman - jtjustman
 - bug #2491017 [operations] ANSI mode not supported (db rename and table move) 
 - bug #2609346 [operations] Fix copying views.
+- rfe #2127983 Readd documentation link, it does not protect against anything.
 
 3.1.3.0 (2009-02-28)
 + [lang] Turkish update, thanks to Burak Yavuz
